Entire code base now compliant with pre-commit settings

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,4 +28,15 @@ where = src
 [options.extras_require]
 dev =
     pytest>=6.0
-    pytest-cov 
+    pytest-cov
+
+[flake8]
+max-line-length = 120
+extend-ignore = E203
+
+[black]
+line-length = 120
+
+[isort]
+profile = black
+multi_line_output = 3
