--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,3 +1,4 @@
+# Testing
 pytest
 pytest-cov
 pre-commit
@@ -5,4 +6,19 @@ black
 flake8
 autoflake
 isort
+mypy
+
+# Jupyter
+jupyter
+jupyterlab
+ipywidgets
+
+# Related packages useful in jupyter notebooks
+scipy
+matplotlib
+
+# Requirements
 -r requirements.txt
+
+# Type checking
+pandas-stubs
