--- a/setup.cfg
+++ b/setup.cfg
@@ -40,3 +40,14 @@ line-length = 120
 [isort]
 profile = black
 multi_line_output = 3
+
+[mypy]
+disallow_untyped_defs = True
+disallow_incomplete_defs = True
+check_untyped_defs = True
+disallow_untyped_decorators = True
+no_implicit_optional = True
+warn_redundant_casts = True
+warn_unused_ignores = True
+warn_return_any = True
+warn_unreachable = True
