--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,15 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+# System files
+.DS_Store
+.Trash*
+*~
+.*.swp
+.*.swo
+Thumbs.db
+[Dd]esktop.ini
+
 # C extensions
 *.so
 
