--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Build and test in container
       run: |
         docker build -t sentinel1-dev .
-        docker run sentinel1-dev bash -c "pip install -e . && pre-commit run --all-files && pytest tests/ -v"
+        docker run sentinel1-dev bash -c "maturin develop && pre-commit run --all-files && pytest tests/ -v"
 
   install-tests:
     runs-on: ubuntu-latest
@@ -32,10 +32,12 @@ jobs:
     - name: Test clean install
       run: |
         python -m pip install --upgrade pip
+        pip install maturin
         # Install in a new directory to ensure clean install
         mkdir test_install
         cd test_install
-        pip install ../
+        maturin build --release
+        pip install ../dist/*.whl
 
     - name: Test imports
       run: |
