--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
         # Install in a new directory to ensure clean install
         mkdir test_install
         cd test_install
-        maturin build --release
+        maturin build --release --manifest-path ../rust/Cargo.toml
         pip install ../dist/*.whl
 
     - name: Test imports
