--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,12 +32,10 @@ jobs:
     - name: Test clean install
       run: |
         python -m pip install --upgrade pip
-        pip install maturin
         # Install in a new directory to ensure clean install
         mkdir test_install
         cd test_install
-        maturin build --release --manifest-path ../rust/Cargo.toml
-        pip install ../dist/*.whl
+        pip install ../
 
     - name: Test imports
       run: |
