--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,16 +11,43 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+
     - name: Build and test in container
       run: |
         docker build -t sentinel1-dev .
-        docker run sentinel1-dev bash -c "maturin develop && pre-commit run --all-files && pytest tests/ -v"
+        docker run sentinel1-dev bash -c "
+          maturin develop &&
+          pre-commit run --all-files &&
+          pytest tests/ -v
+        "
+
+  build-package:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Install Rust
+      run: |
+        curl https://sh.rustup.rs -sSf | sh -s -- -y
+        source $HOME/.cargo/env
+
+    - name: Install Maturin
+      run: pip install maturin
+
+    - name: Build Wheel
+      run: |
+        maturin build --release --manifest-path path/to/Cargo.toml
+      # Save built artifacts
+      with:
+        path: ./target/wheels
+      continue-on-error: false
 
   install-tests:
+    needs: build-package
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.8', '3.9', '3.10']
+        python-version: ['3.8', '3.9', '3.10', '3.11']
     steps:
     - uses: actions/checkout@v4
 
@@ -29,20 +56,21 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Test clean install
+    - name: Test installability
       run: |
         python -m pip install --upgrade pip
-        # Install Rust
-        curl https://sh.rustup.rs -sSf | sh -s -- -y
-        source $HOME/.cargo/env
-        # Install maturin
-        pip install maturin
-        # Install in a new directory to ensure clean install
-        mkdir test_install
-        cd test_install
-        pip install ../
+        # Install package from built wheel
+        pip install ../target/wheels/*.whl
 
     - name: Test imports
       run: |
         python -c "from sentinel1decoder import Level0Decoder, Level0File"
         python -c "import sentinel1decoder; print(sentinel1decoder.__version__)"
+
+  lint-and-precommit:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Run pre-commit checks
+      run: pre-commit run --all-files
