--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,9 @@ jobs:
       run: pip install maturin
 
     - name: Build Wheel
-      run: maturin build --release --manifest-path rust/Cargo.toml
+      run: |
+        mkdir -p target/wheels
+        maturin build --release --manifest-path rust/Cargo.toml --out target/wheels
 
     - name: Upload built wheels
       uses: actions/upload-artifact@v4
@@ -77,6 +79,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.11'
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install pre-commit
+        pip install -r requirements-dev.txt
 
     - name: Run pre-commit checks
       run: pre-commit run --all-files
