--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,8 +23,16 @@ jobs:
 
   build-package:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ['3.8', '3.9', '3.10', '3.11']
     steps:
     - uses: actions/checkout@v4
+
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v5
+      with:
+        python-version: ${{ matrix.python-version }}
 
     - name: Install Rust
       run: |
@@ -42,7 +50,7 @@ jobs:
     - name: Upload built wheels
       uses: actions/upload-artifact@v4
       with:
-        name: wheels
+        name: wheels-${{ matrix.python-version }}
         path: target/wheels/*.whl
 
   install-tests:
@@ -57,7 +65,7 @@ jobs:
     - name: Download built wheels
       uses: actions/download-artifact@v4
       with:
-        name: wheels
+        name: wheels-${{ matrix.python-version }}
         path: target/wheels
 
     - name: Set up Python ${{ matrix.python-version }}
