--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,7 +73,7 @@ jobs:
     - name: Test installability
       run: |
         python -m pip install --upgrade pip
-        pip install target/wheels/*.whl
+        python -m pip install -v --no-cache-dir target/wheels/*.whl
 
     - name: Test imports
       run: |
