--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,12 +39,15 @@ jobs:
     - name: Install Maturin
       run: pip install maturin
 
-    - name: Build Wheel
+    - name: Build Wheels
       run: |
         mkdir -p target/wheels
-        maturin build --release --manifest-path rust/Cargo.toml --out target/wheels --interpreter python3.8 python3.9 python3.10 python3.11 --manylinux 2_34
+        maturin build --release --manifest-path rust/Cargo.toml \
+          --out target/wheels \
+          --interpreter python3.8 python3.9 python3.10 python3.11 \
+          --manylinux 2_34
 
-    - name: Upload built wheels
+    - name: Upload Built Wheels
       uses: actions/upload-artifact@v4
       with:
         name: wheels
@@ -59,7 +62,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Download built wheels
+    - name: Download Built Wheels
       uses: actions/download-artifact@v4
       with:
         name: wheels
@@ -70,12 +73,14 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Test installability
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install -v --no-cache-dir target/wheels/*.whl
+    - name: Upgrade pip
+      run: python -m pip install --upgrade pip
 
-    - name: Test imports
+    - name: Test Installability
+      run: |
+        python -m pip install -v --no-cache-dir target/wheels/sentinel1decoder-*cp${{ matrix.python-version.replace('.', '') }}*.whl
+
+    - name: Test Imports
       run: |
         python -c "from sentinel1decoder import Level0Decoder, Level0File"
         python -c "import sentinel1decoder; print(sentinel1decoder.__version__)"
@@ -90,11 +95,11 @@ jobs:
       with:
         python-version: '3.11'
 
-    - name: Install dependencies
+    - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
         pip install pre-commit
         pip install -r requirements-dev.txt
 
-    - name: Run pre-commit checks
+    - name: Run Pre-commit Checks
       run: pre-commit run --all-files
