--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,12 +69,20 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
+    - name: Cache pip packages
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
+
     - name: Upgrade pip
       run: python -m pip install --upgrade pip
 
     - name: Test Installability
       run: |
-        python -m pip install -v --no-cache-dir target/wheels/sentinel1decoder-*cp${{ matrix.python-version.replace('.', '') }}*.whl
+        python -m pip install -v --no-cache-dir target/wheels/sentinel1decoder-*cp${{ matrix.python-version == '3.8' && '38' || matrix.python-version == '3.9' && '39' || matrix.python-version == '3.10' && '310' || '311' }}*.whl
 
     - name: Test Imports
       run: |
