--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,10 +38,7 @@ jobs:
     - name: Build Wheels
       run: |
         mkdir -p target/wheels
-        maturin build --release --manifest-path rust/Cargo.toml \
-          --out target/wheels \
-          --interpreter python3.8 python3.9 python3.10 python3.11 \
-          --manylinux 2_34
+        maturin build --release --out target/wheels
 
     - name: Upload Built Wheels
       uses: actions/upload-artifact@v4
