--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,10 @@
 [build-system]
 requires = ["maturin>=1.4.0"]
 build-backend = "maturin"
+
+[tool.maturin]
+python-source = "src"
+module-name = "sentinel1decoder"
+manifest-path = "rust/Cargo.toml"
+manylinux = "2_34"
+interpreter = ["python3.8", "python3.9", "python3.10", "python3.11"]
