--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,8 @@ jobs:
       run: |
         mkdir -p target/wheels
         maturin build --release --out target/wheels
+        echo "Built wheels:"
+        ls -l target/wheels/
 
     - name: Upload Built Wheels
       uses: actions/upload-artifact@v4
@@ -61,6 +63,11 @@ jobs:
         name: wheels
         path: target/wheels
 
+    - name: List Downloaded Wheels
+      run: |
+        echo "Downloaded wheels:"
+        ls -l target/wheels/
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
       with:
@@ -79,7 +86,7 @@ jobs:
 
     - name: Test Installability
       run: |
-        python -m pip install -v --no-cache-dir target/wheels/sentinel1decoder-*cp${{ matrix.python-version == '3.8' && '38' || matrix.python-version == '3.9' && '39' || matrix.python-version == '3.10' && '310' || '311' }}*.whl
+        python -m pip install -v --no-cache-dir target/wheels/sentinel1decoder-*-cp${{ matrix.python-version == '3.8' && '38' || matrix.python-version == '3.9' && '39' || matrix.python-version == '3.10' && '310' || '311' }}-cp${{ matrix.python-version == '3.8' && '38' || matrix.python-version == '3.9' && '39' || matrix.python-version == '3.10' && '310' || '311' }}-manylinux_2_34_x86_64.whl
 
     - name: Test Imports
       run: |
