--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,7 +86,7 @@ jobs:
 
     - name: Test Installability
       run: |
-        python -m pip install -v --no-cache-dir target/wheels/sentinel1decoder-*-cp${{ matrix.python-version == '3.8' && '38' || matrix.python-version == '3.9' && '39' || matrix.python-version == '3.10' && '310' || '311' }}-cp${{ matrix.python-version == '3.8' && '38' || matrix.python-version == '3.9' && '39' || matrix.python-version == '3.10' && '310' || '311' }}-manylinux_2_34_x86_64.whl
+        python -m pip install -v --no-cache-dir target/wheels/sentinel1decoder-0.1.0-cp${{ matrix.python-version == '3.8' && '38' || matrix.python-version == '3.9' && '39' || matrix.python-version == '3.10' && '310' || '311' }}-cp${{ matrix.python-version == '3.8' && '38' || matrix.python-version == '3.9' && '39' || matrix.python-version == '3.10' && '310' || '311' }}-manylinux_2_34_x86_64.whl
 
     - name: Test Imports
       run: |
