Migrated to maturin from setuptools (#16)
- Rewrote the CI workflow
- Included basic rust crate as a placeholder.

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,3 +1,6 @@
+# Build system
+maturin>=1.4.0
+
 # Testing
 pytest
 pytest-cov
@@ -16,9 +19,6 @@ ipywidgets
 # Related packages useful in jupyter notebooks
 scipy
 matplotlib
-
-# Requirements
--r requirements.txt
 
 # Type checking
 pandas-stubs
