--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,16 +11,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+
     - name: Build and test in container
       run: |
         docker build -t sentinel1-dev .
-        docker run sentinel1-dev bash -c "pip install -e . && pre-commit run --all-files && pytest tests/ -v"
+        docker run --rm sentinel1-dev pytest tests/ -v
 
-  install-tests:
+  build-package:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.8', '3.9', '3.10']
+        python-version: ['3.8', '3.9', '3.10', '3.11']
     steps:
     - uses: actions/checkout@v4
 
@@ -29,15 +30,87 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Test clean install
+    - name: Install Rust
       run: |
-        python -m pip install --upgrade pip
-        # Install in a new directory to ensure clean install
-        mkdir test_install
-        cd test_install
-        pip install ../
+        curl https://sh.rustup.rs -sSf | sh -s -- -y
+        source $HOME/.cargo/env
 
-    - name: Test imports
+    - name: Install Maturin
+      run: pip install maturin
+
+    - name: Build Wheels
+      run: |
+        mkdir -p target/wheels
+        maturin build --release --out target/wheels
+        echo "Built wheels:"
+        ls -la target/wheels/
+
+    - name: Upload Built Wheels
+      uses: actions/upload-artifact@v4
+      with:
+        name: wheels-${{ matrix.python-version }}
+        path: target/wheels/*.whl
+
+  install-tests:
+    needs: build-package
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ['3.8', '3.9', '3.10', '3.11']
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Download Built Wheels
+      uses: actions/download-artifact@v4
+      with:
+        name: wheels-${{ matrix.python-version }}
+        path: target/wheels
+
+    - name: List Downloaded Wheels
+      run: |
+        echo "Downloaded wheels:"
+        ls -l target/wheels/
+
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v5
+      with:
+        python-version: ${{ matrix.python-version }}
+
+    - name: Cache pip packages
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('pyproject.toml') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
+
+    - name: Upgrade pip
+      run: python -m pip install --upgrade pip
+
+    - name: Test Installability
+      run: |
+        python -m pip install -v --no-cache-dir target/wheels/sentinel1decoder-0.1.0-cp${{ matrix.python-version == '3.8' && '38' || matrix.python-version == '3.9' && '39' || matrix.python-version == '3.10' && '310' || '311' }}-cp${{ matrix.python-version == '3.8' && '38' || matrix.python-version == '3.9' && '39' || matrix.python-version == '3.10' && '310' || '311' }}-manylinux_2_34_x86_64.whl
+
+    - name: Test Imports
       run: |
         python -c "from sentinel1decoder import Level0Decoder, Level0File"
         python -c "import sentinel1decoder; print(sentinel1decoder.__version__)"
+
+  lint-and-precommit:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.11'
+
+    - name: Install Dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install pre-commit
+        pip install -r requirements-dev.txt
+
+    - name: Run Pre-commit Checks
+      run: pre-commit run --all-files
