--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,20 @@
 [build-system]
-requires = ["setuptools>=45", "wheel"]
-build-backend = "setuptools.build_meta"
+requires = ["maturin>=1.4.0"]
+build-backend = "maturin"
+
+[project]
+name = "sentinel1decoder"
+version = "0.1.0"
+description = "Sentinel-1 Level-0 decoder"
+requires-python = ">=3.8"
+dependencies = [
+    "numpy",
+    "pandas",
+]
+
+[tool.maturin]
+python-source = "src"
+module-name = "sentinel1decoder"
+manifest-path = "rust/Cargo.toml"
+manylinux = "2_34"
+interpreter = ["python3.8", "python3.9", "python3.10", "python3.11"]
