--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -109,8 +109,7 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pre-commit
-        pip install -r requirements-dev.txt
+        pip install -e ".[dev]"
 
     - name: Run Pre-commit Checks
       run: pre-commit run --all-files
