--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,5 +111,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install -e ".[dev]"
 
+    - name: Install pre-commit
+      run: pip install pre-commit
+
     - name: Run Pre-commit Checks
       run: pre-commit run --all-files
