--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,8 @@ dev = [
     "matplotlib",
     # Type checking
     "pandas-stubs",
+    "numpy-stubs",
+    "pytest-stubs"
 ]
 
 [tool.maturin]
@@ -70,7 +72,3 @@ warn_redundant_casts = true
 warn_unused_ignores = true
 warn_return_any = true
 warn_unreachable = true
-
-[tool.flake8]
-max-line-length = 120
-extend-ignore = ["E203"]
