--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -115,4 +115,4 @@ jobs:
       run: pip install pre-commit
 
     - name: Run Pre-commit Checks
-      run: pre-commit run --all-files
+      run: pre-commit run --all-files --show-diff-on-failure
