Specified exact versions of precommit tools in pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,11 +30,11 @@ dev = [
     "pytest",
     "pytest-cov",
     "pre-commit",
-    "black",
-    "flake8",
+    "black==24.2",
+    "flake8==7.0",
     "autoflake",
-    "isort",
-    "mypy",
+    "isort==5.13.2",
+    "mypy==1.8.0",
     # Jupyter
     "jupyter",
     "jupyterlab",
