--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,15 +7,56 @@ on:
     branches: [ main ]
 
 jobs:
-  container-tests:
+  build-container:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
 
-    - name: Build and test in container
-      run: |
-        docker build -t sentinel1-dev .
-        docker run --rm sentinel1-dev pytest tests/ -v
+    - name: Build Docker Container
+      run: docker build -t sentinel1-dev .
+
+    - name: Save Docker Image as Artifact
+      run: docker save sentinel1-dev | gzip > sentinel1-dev.tar.gz
+
+    - name: Upload Docker Image Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: sentinel1-dev-image
+        path: sentinel1-dev.tar.gz
+
+  lint-and-precommit:
+    needs: build-container
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Download Docker Image Artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: sentinel1-dev-image
+
+    - name: Load Docker Image
+      run: gunzip -c sentinel1-dev.tar.gz | docker load
+
+    - name: Run Pre-commit Checks in Docker
+      run: docker run --rm sentinel1-dev pre-commit run --all-files --show-diff-on-failure
+
+  run-tests:
+    needs: build-container
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Download Docker Image Artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: sentinel1-dev-image
+
+    - name: Load Docker Image
+      run: gunzip -c sentinel1-dev.tar.gz | docker load
+
+    - name: Run Tests in Docker
+      run: docker run --rm sentinel1-dev pytest tests/ -v
 
   build-package:
     runs-on: ubuntu-latest
@@ -95,22 +136,3 @@ jobs:
       run: |
         python -c "from sentinel1decoder import Level0Decoder, Level0File"
         python -c "import sentinel1decoder; print(sentinel1decoder.__version__)"
-
-  lint-and-precommit:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.11'
-
-    - name: Install Dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pre-commit
-        pip install -r requirements-dev.txt
-
-    - name: Run Pre-commit Checks
-      run: pre-commit run --all-files
