--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -31,8 +31,11 @@ repos:
     rev: 7.0.0
     hooks:
     -   id: flake8
+        args: ["--config=.flake8"]
 
 -   repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.8.0
     hooks:
     -   id: mypy
+        args: ["--config-file=pyproject.toml"]
+        language: system
