--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,7 @@ jobs:
     strategy:
       matrix:
         python-version: ['3.8', '3.9', '3.10', '3.11']
-        rust-version: ['1.80.0', 'stable']
+        rust-version: ['stable']
     steps:
     - uses: actions/checkout@v4
 
