--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,6 +82,7 @@ jobs:
       run: |
         rustc --version
         cargo --version
+        pwd
 
     - name: Install Maturin
       run: pip install maturin
