Use github actions Rust installation over curl (#18)
Some indecision over whether to use multiple Rust versions during CI build tests. Ultimately decided not to - we are building a python wheel only. However, some improvements to the CI process fell out of this experimentation.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,10 +71,16 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Install Rust
+    - name: Set up Rust
+      uses: actions-rs/toolchain@v1
+      with:
+        toolchain: 'stable'
+        override: true
+
+    - name: Verify and Log Rust Setup
       run: |
-        curl https://sh.rustup.rs -sSf | sh -s -- -y
-        source $HOME/.cargo/env
+        rustc --version
+        cargo --version
 
     - name: Install Maturin
       run: pip install maturin
