--- a/.github/workflows/publish-testpypi.yml
+++ b/.github/workflows/publish-testpypi.yml
@@ -33,7 +33,10 @@ jobs:
         run: python -m pip install --upgrade twine
 
       - name: Build wheels with Maturin
-        run: maturin build --release --manylinux --interpreter $(which python)
+        run: |
+          mkdir -p target/wheels
+          maturin build --release --manylinux --interpreter $(which python) --out target/wheels
+
 
       - name: Verify wheels
         run: python -m twine check target/wheels/*
@@ -42,4 +45,4 @@ jobs:
         env:
           TWINE_USERNAME: "__token__"
           TWINE_PASSWORD: ${{ secrets.TEST_PYPI_API_TOKEN }}
-        run: python -m twine upload --repository testpypi target/wheels/*
+        run: python -m twine upload --repository testpypi target/wheels/*.whl
