--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -30,7 +30,12 @@ jobs:
         run: python -m pip install --upgrade pip maturin
 
       - name: Build wheels with Maturin
-        run: maturin build --release --manylinux --interpreter $(which python)
+        run: |
+          mkdir -p target/wheels
+          maturin build --release --manylinux --interpreter $(which python) --out target/wheels
+
+      - name: Install Twine
+        run: python -m pip install --upgrade twine
 
       - name: Install Twine
         run: python -m pip install --upgrade twine
@@ -42,4 +47,4 @@ jobs:
         env:
           TWINE_USERNAME: "__token__"
           TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
-        run: python -m twine upload target/wheels/*
+        run: python -m twine upload target/wheels/*.whl
