--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["maturin>=1.4.0"]
+requires = ["maturin>=1,<2"]
 build-backend = "maturin"
 
 [project]
@@ -9,7 +9,9 @@ description = "A python decoder for ESA Sentinel-1 Level0 files"
 readme = "README.md"
 license = {text = "GPL-3.0"}
 classifiers = [
-    "Programming Language :: Python :: 3",
+    "Programming Language :: Rust",
+    "Programming Language :: Python :: Implementation :: CPython",
+    "Programming Language :: Python :: Implementation :: PyPy",
     "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
     "Operating System :: OS Independent",
 ]
