--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build-and-test:
+  build-and-test-installability:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
