Updated CI again

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,29 +9,30 @@ on:
 jobs:
   build-and-verify-installability:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ['3.8', '3.9', '3.10', '3.11']
     steps:
     - uses: actions/checkout@v4
 
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: 3.x
 
-    - name: Build and verify package
+    - name: Build wheels
       uses: PyO3/maturin-action@v1
       with:
+        target: x86_64
         args: --release --out dist --find-interpreter
         sccache: false
+        manylinux: auto
 
-    - name: Install the built package
-      run: pip install dist/*.whl
-
-    - name: Verify package can be imported
+    - name: Install and verify wheels
       run: |
-        python -c "import sentinel1decoder; print('Package imported successfully on Python ${{ matrix.python-version }}')"
+        for wheel in dist/*.whl; do
+          echo "Testing wheel: $wheel"
+          pip install "$wheel"
+          python -c "import sentinel1decoder; print('Package imported successfully')"
+          pip uninstall -y sentinel1decoder
+        done
 
   build-container:
     runs-on: ubuntu-latest
