Moved sample value reconstruction into Rust
This removes a significant source of slowdown in the original implementation, with samples no longer being converted into and then out of a python SampleValue class.

--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -8,7 +8,9 @@ name = "_sentinel1decoder"
 crate-type = ["cdylib"]
 
 [dependencies]
-pyo3 = { version = "0.25.1", features = ["extension-module"] }
+pyo3 = { version = "0.27", features = ["extension-module"] }
+numpy = "0.27"
+num-complex = "0.4"
 
 [package.metadata.maturin]
 # Optional: set the Python package name if different from the Rust crate name
