--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ classifiers = [
 ]
 requires-python = ">=3.8"
 dependencies = [
-    "numpy",
+    "numpy>=1.24",  # Minimum version compatible with rust-numpy 0.27
     "pandas",
 ]
 
