--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -11,6 +11,7 @@ crate-type = ["cdylib"]
 pyo3 = { version = "0.27", features = ["extension-module"] }
 numpy = "0.27"
 num-complex = "0.4"
+rayon = "1.10"
 
 [package.metadata.maturin]
 # Optional: set the Python package name if different from the Rust crate name
