Removed dead code following migration from python to rust for decoding functions (#33)
* Removed dead code following migration from python to rust for decoding functions

Several no-longer-required python implementations are removed.
Refactored some tests to enable removal of some code only being used to test against rust implementations.

* Modified CI test setup to allow discovery of conftest

* Fixup

* Removed TYPE_CHECKING and import fixture types directly instead

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,4 +89,4 @@ jobs:
       run: gunzip -c sentinel1-dev.tar.gz | docker load
 
     - name: Run Tests in Docker
-      run: docker run --rm sentinel1-dev pytest tests/ -v
+      run: docker run --rm -w /app sentinel1-dev pytest -v
