--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -133,10 +133,11 @@ jobs:
     strategy:
       matrix:
         platform:
-          - runner: macos-13
-            target: x86_64
-          - runner: macos-14
-            target: aarch64
+      platform:
+        - runner: macos-15-intel
+          target: x86_64
+        - runner: macos-latest
+          target: aarch64
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
