Devcontainer, rust header decoder, rename burst (#38)
Updated decoder to version 2.0

This change:
* Moves away from the "burst" terminology in favor of "acquisition chunk". Several methods and utils added. This is a breaking change, although we retain a few aliases with deprecation warnings.
* Moves header decoding to rust, and adds more field parsing. Multiple enums added to support this.
* Adds documentation pages.
* Adds devcontainer.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,20 @@ on:
     branches: [ main ]
 
 jobs:
+  check-dockerfile-sync:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Check Dockerfile sync
+      run: |
+        if [ -f scripts/check_dockerfile_sync.sh ]; then
+          chmod +x scripts/check_dockerfile_sync.sh
+          ./scripts/check_dockerfile_sync.sh
+        else
+          echo "Warning: sync check script not found"
+        fi
+
   build-and-verify-installability:
     runs-on: ubuntu-22.04
     strategy:
